rendered colored tiles and correct number/letter pos

--- a/chessboard_app_v2/chessboard_game_v02/src/component/Chessboard.css
+++ b/chessboard_app_v2/chessboard_game_v02/src/component/Chessboard.css
@@ -1,5 +1,21 @@
 #board {
+  display: grid;
+  grid-template-columns: repeat(8,1fr);
+  grid-template-rows: repeat(8,1fr);
   width: 500px;
   height: 500px;
+  background-color: #1037b9;
+}
+
+#board  .tile {
+width: 62.5px;
+height: 62.5px;
+
+}
+
+#board .tile_black {
   background-color: #779558;
+}
+#board .tile_white {
+  background-color: aliceblue;
 }
